--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
   <head>
     <meta charset="utf-8">
     <title>My webpage</title>
-    <link href="https://fonts.googleapis.com/css?family=Dosis&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;400;700&display=swap" rel="stylesheet">
     <link href="styles/style.css" rel="stylesheet">
 
   </head>
