--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link href="styles/style.css" rel="stylesheet">
 
   </head>
-  <body id="body" class="bodySmall">
+  <body id="body" class="body">
 
     <br>
     <h1>Wojciech Lis</h1>
@@ -17,7 +17,7 @@
     <div id = "description" class = "descriptionHidden">
       <img src="images/myPhoto.jpg" alt="My picture">
       <p id="paragraph">
-        I was born in 1986 in the south of Poland. In 2009 I've come to the Netherlands. 
+        I was born in 1986, in the south of Poland. In 2009 I've come to the Netherlands. 
         Since then, while living in Utrecht, I was working for few logistics companies. 
         During that time, I've learned a lot about efficient warehousing, planning within time restraints, and "on the spot" problem-solving. 
         Meanwhile, I've spent my free time on DIY's (metal and woodworking, electronics), computers (gaming, overclocking, and small repairs), 
