--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
   </head>
   <body id="body" class="body">
+    <a href="./bmi.html">oko</a>
     <h1>Wojciech Lis</h1>
     <button id="expand">...about me...</button>
     <div id = "description" class = "descriptionHidden">
